--- a/styles.css
+++ b/styles.css
@@ -2,25 +2,87 @@
     box-sizing: border-box;
 }
 
-body {
-    background-color: #143f6b;
+html {
+    
+    background-image: url("music-bg.jpg");
+    background-attachment: fixed;
+    background-position: center;
+    background-size: cover;
+    width: 100%;
+    height: 100%;
+}
+body-div {
+
     margin: 0;
-    min-height: 100vh;
+    margin-bottom: -60px;
+    min-height: 70vh;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
+
+h1 {
+    text-align: center;
+    margin: 0 auto;
+    margin-top:80px;
+
+}
+.header-text {
+    font-family: 'Comfortaa', cursive;
+    font-size: 6rem;
+    color: hotpink;
+    text-shadow: 2px 2px 20px hotpink;
+    border: 2px solid white;
+    
+    
+
+}
+
 .piano {
     display: flex;
+    box-shadow: 10px 10px 30px;
+    border-radius: 10px;
 }
+
+.drone-note {
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+    
+}
+
+.drone {
+    font-family: 'Fredoka One', cursive;
+    background-color: rgb(246, 198, 255);
+    justify-content: space-between;
+    margin: 10px;
+    padding: 15px;
+    border-radius: 8px;
+    box-shadow: 10px 10px 30px;
+    cursor: pointer;
+    font-size: 20px;
+   
+}
+
+.drone:hover {
+    background-color: white;
+    color: black;
+    
+    
+}
+
+
 
 .white {
     width: 100px;
     height: 400px;
     background-color: white;
-    border: 1px solid #333;
-    border-radius: 6px;
+    border: 4px solid #333;
+    border-radius: 10px;
+    cursor: pointer;
 }
 
 .white.active {
@@ -31,12 +93,14 @@ body {
     width: 60px;
     height: 240px;
     background-color: rgb(19, 19, 19);
-    border-radius: 6px;
+    border-radius: 10px;
     margin-left: -30px;
     margin-right: -30px;
     z-index: 2;
+    box-shadow: 1px 1px 4px;
+    cursor: pointer;
 }
 
 .black.active {
-    background-color: rgb(40, 40, 40);
+    background-color: rgb(230, 62, 210);
 }
