--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,9 @@ h1 {
     font-size: 6rem;
     color: hotpink;
     text-shadow: 2px 2px 20px hotpink;
-    border: 2px solid white;
+    border: 2px solid rgb(255, 255, 255);
+    padding: 8px;
+    border-radius: 4px;
     
     
 
@@ -56,11 +58,12 @@ h1 {
 
 .drone {
     font-family: 'Fredoka One', cursive;
-    background-color: rgb(246, 198, 255);
+    background-color: rgb(0, 0, 0);
+    color: white;
     justify-content: space-between;
     margin: 10px;
     padding: 15px;
-    border-radius: 8px;
+    border-radius: 4px;
     box-shadow: 10px 10px 30px;
     cursor: pointer;
     font-size: 20px;
@@ -69,7 +72,7 @@ h1 {
 
 .drone:hover {
     background-color: white;
-    color: black;
+    color: hotpink;
     
     
 }
